# Seacoast_MQP_Software

./: .gitignore  .gitmodules  readme
docs/: README_software.md  dosing_controller_spec.md  project_description_1.txt  rpm_attach.csv  rpm_detach.csv  state_machine_design.md
docs/specs/: docs_specs_00-system-overview.nlspec.md  docs_specs_01-shared-protocol.nlspec.md  docs_specs_02-pico-firmware.nlspec.md  docs_specs_03-esp32-firmware.nlspec.md
drv8163/: CMakeLists.txt  README.md  drv8163.c  drv8163.h  drv8163_example.c  main.c
drv8163_pico_discrete/: CMakeLists.txt  drv8163.c  drv8163_pico.c  drv8163_pico.h  main.c
drv8434s/: CMakeLists.txt  README.md  drv8434s.c  drv8434s.h  example_qtpy_rp2040.c  example_qtpy_samd21.cpp  main.c
drv8434s/arduino/: README.md
drv8434s/arduino/qtpy_samd21/: drv8434s.c
firmware/common/include/: seacoast_proto.h
firmware/common/src/: seacoast_proto.c
firmware/esp32/lcd_uext_ili9341/: CMakeLists.txt
firmware/esp32/lcd_uext_ili9341/main/: CMakeLists.txt  app_main.c  control.c  control.h  idf_component.yml  lcd_uext_ili9341.c  touch_cal.c  touch_ns2009.h  uart_link.c  uart_link.h  ui.c  ui.h  ui_screens.c
firmware/esp32/lcd_uext_ili9341/main/tools/: i2c_scan.c
firmware/pico/drv8163_pico_discrete/: CMakeLists.txt  drv8163.h  drv8163_pico.c  drv8163_pico.h  main.c
firmware/pico/drv8434s/: README.md  drv8434s.c  drv8434s.h
firmware/pico/drv8434s/arduino/: build_qtpy_samd21.sh
firmware/pico/drv8434s/arduino/qtpy_samd21/: qtpy_samd21.ino
firmware/shared/: seacoast_proto.c  seacoast_proto.h
lcd_uext_ili9341/components/motor_hal/: CMakeLists.txt  motor_hal_pico.c
lcd_uext_ili9341/components/motor_hal/include/: motor_hal.h
lcd_uext_ili9341/components/pico_link/: CMakeLists.txt  pico_link.c
lcd_uext_ili9341/components/pico_link/include/: pico_link.h
lcd_uext_ili9341/components/proto/: CMakeLists.txt  proto.c
lcd_uext_ili9341/main/: CMakeLists.txt  app_main.c  control.c  control.h  display.c  display.h  dosing.c  dosing.h  flap.c  flap.h  i2c_scan.h  loadcell.c  loadcell.h  pico_power.c  pico_power.h  recipes.c  recipes.h  sys_sequence.c  sys_sequence.h  touch_cal.c  touch_cal.h  touch_ns2009.c  ui.c  ui.h  ui_screens.c  ui_screens.h  web_server.c  web_server.h  wifi_ap.c  wifi_ap.h
pico_fw/: CMakeLists.txt
pico_fw/drivers/drv8163/: drv8163.c  drv8163.h
pico_fw/drivers/drv8263/: drv8263.c  drv8263.h
pico_fw/drivers/drv8434s/: datalab-output-drv8434s.pdf.md  datalab-output-drv8434s.pdf2.md  drv8434s.c  drv8434s.h
pico_fw/shared/: cobs.c  cobs.h  proto.h  proto_crc.c
pico_fw/src/: CMakeLists.txt  board_pins.h  main.c  stepper8434.c  stepper_8434.h  stepper_test.c  testy.ino  uart_server.c  uart_server.h
scripts/: extract_dosing_csv.py  setup_dependencies.sh
shared/proto/: cobs.c  cobs.h  proto.h  proto_crc.c
(+2 files in other folders)
